# mlcolvar

./: .coveragerc  .gitattributes  .gitignore  .lgtm.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  colab_setup.sh  libtorch_flags_from_python.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sitecustomize.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  PyPI.yaml  codeql.yml  plumed.yaml
cvs/supervised/: simulAELDA.py
devtools/: README.md  test_requirements.txt
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  api.rst  api_core.rst  api_cvs.rst  api_data.rst  api_explain.rst  api_utils.rst  conf.py  contributing.rst  examples.rst  examples_atomistic.rst  examples_experiments.rst  getting_started.rst  index.rst  installation.rst  make.bat  plumed.rst  plumed_interface.rst  plumed_module.rst  requirements.yaml  tutorials.rst  tutorials_advanced.rst  tutorials_cvs.rst  tutorials_experiments.rst  tutorials_explain.rst  tutorials_overview.rst  tutorials_utils.rst
docs/_templates/: custom-class-template.rst
docs/autosummary/: mlcolvar.core.loss.AutocorrelationLoss.rst  mlcolvar.core.loss.ELBOGaussiansLoss.rst  mlcolvar.core.loss.FisherDiscriminantLoss.rst  mlcolvar.core.loss.MSELoss.rst  mlcolvar.core.loss.ReduceEigenvaluesLoss.rst  mlcolvar.core.loss.TDALoss.rst  mlcolvar.core.nn.FeedForward.rst  mlcolvar.core.nn.graph.BaseGNN.rst  mlcolvar.core.nn.graph.GVPModel.rst  mlcolvar.core.nn.graph.SchNetModel.rst  mlcolvar.core.nn.graph.radial.RadialEmbeddingBlock.rst  mlcolvar.core.stats.LDA.rst  mlcolvar.core.stats.PCA.rst  mlcolvar.core.stats.Stats.rst  mlcolvar.core.stats.TICA.rst  mlcolvar.core.transform.Normalization.rst  mlcolvar.core.transform.Transform.rst  mlcolvar.core.transform.descriptors.CoordinationNumbers.rst  mlcolvar.core.transform.descriptors.EigsAdjMat.rst  mlcolvar.core.transform.descriptors.MultipleDescriptors.rst  mlcolvar.core.transform.descriptors.PairwiseDistances.rst  mlcolvar.core.transform.descriptors.TorsionalAngle.rst  mlcolvar.core.transform.tools.ContinuousHistogram.rst  mlcolvar.core.transform.tools.Normalization.rst  mlcolvar.core.transform.tools.SwitchingFunctions.rst  mlcolvar.cvs.AutoEncoderCV.rst  mlcolvar.cvs.BaseCV.rst  mlcolvar.cvs.Committor.rst  mlcolvar.cvs.DeepLDA.rst  mlcolvar.cvs.DeepTDA.rst  mlcolvar.cvs.DeepTICA.rst  mlcolvar.cvs.MultiTaskCV.rst  mlcolvar.cvs.RegressionCV.rst  mlcolvar.cvs.VariationalAutoEncoderCV.rst  mlcolvar.data.DictDataset.rst  mlcolvar.data.DictLoader.rst  mlcolvar.data.DictModule.rst  mlcolvar.data.graph.AtomicNumberTable.rst  mlcolvar.data.graph.Configuration.rst  mlcolvar.data.graph.create_dataset_from_configurations.rst  (+58 more)
docs/notebooks/: 2d-model_discriminant.ipynb  2d-model_tica.ipynb  adv_newcv.ipynb  ala2_deeplda.ipynb  (+17 more)
mlcolvar/: REFACTORING.md  __init__.py
mlcvs/: .gitignore  REFACTORING.md  TODO.md  __init__.py  _version.py  io.py  lda.py  models.py  nn.py  optim.py  tica.py
plumed/: PytorchModel.cpp  PytorchModelTest.cpp
plumed_interfaces/: PytorchGNN.cpp  PytorchKolmogorovBias.cpp  PytorchKolmogorovBiasExported.cpp  PytorchKolmogorovBiasGNN.cpp  PytorchKolmogorovBiasGNNExported.cpp  PytorchModel.cpp  PytorchModelBias.cpp  PytorchModelExported.cpp  PytorchModelGNN.cpp  PytorchModelGNNBias.cpp  PytorchModelGNNExported.cpp  README.md  pytorch_model_bias.cpp
test_graphs/: test_committor.ipynb  test_committor_checkpoint.ipynb  test_explain.ipynb  test_graph.ipynb
(+599 files in other folders)
